welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: value and is not a member of Boolean
    case (a,b,false) => if ((a <= 0) and (b <= 0)) {return false} ;
                                     ^posNeg:5: error: missing parameter type
    										if ((a => 0) and (b => 0)) {return false} ;
                                                                                     ^