welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (a,b,negative) match {
    case (a,b,true) => if ((a <= 0) && (b <= 0)) {return true} else {return false} ;
    case (a,b,false) => if ((a <= 0) and (b <= 0)) {return false} ;
    										if ((a => 0) and (b => 0)) {return false} ;
    										return true ;
  }}